<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_study">

    <fragment
        android:id="@+id/nav_study"
        android:name="com.example.medvocab.ui.study.StudyFragment"
        android:label="@string/menu_study"
        tools:layout="@layout/fragment_study" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.medvocab.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.medvocab.ui.about.AboutFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_about" />



</navigation>