<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contactUsCV"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:backgroundTint="@color/doc_bng"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/contactUsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="MedVocab"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/contactUsText"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="9dp" />

            <TextView
                android:id="@+id/contactUsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactUs_text"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/contactUsBt"
                app:layout_constraintTop_toBottomOf="@+id/contactUsHeading" />

            <Button
                android:id="@+id/contactUsBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactus_bt_text"
                android:textAllCaps="false"
                android:textColor="#5A6163"
                android:textSize="16sp"
                android:textStyle="bold"
                android:backgroundTint="@color/doc_bng"
                app:layout_constraintBottom_toTopOf="@+id/contactUsText"
                app:layout_constraintTop_toBottomOf="@+id/contactUsText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/learnMoreCV"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:backgroundTint="@color/doc_bng"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactUsCV"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/learnMoreHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="Learn More"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/learnMoreText"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="9dp" />

            <TextView
                android:id="@+id/learnMoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learnMore_text"
                android:layout_margin="10dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/learnMoreBt"
                app:layout_constraintTop_toBottomOf="@+id/learnMoreHeading" />

            <Button
                android:id="@+id/learnMoreBt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learnMore_bt_text"
                android:textAllCaps="false"
                android:textColor="#5A6163"
                android:textSize="16sp"
                android:textStyle="bold"
                android:backgroundTint="@color/doc_bng"
                app:layout_constraintBottom_toTopOf="@+id/learnMoreText"
                app:layout_constraintTop_toBottomOf="@+id/learnMoreText" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>