<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/newWordTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:background="#C2CCCD"
        tools:text="NEW WORD" />

    <TextView
        android:id="@+id/wordTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/audioBt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newWordTv"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="50dp"
        android:padding="5dp"
        android:textAlignment="center"
        tools:text="cardiology" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/audioBt"
        android:src="@drawable/ic_baseline_spatial_audio_off_24"
        app:layout_constraintStart_toEndOf="@id/wordTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newWordTv"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="50dp"
        />

    <Button
        android:id="@+id/tapToSeeMeaningBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="10dp"
        android:backgroundTint="@color/doc_bng"
        android:padding="10dp"
        android:text="@string/tap_to_see_meaning_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordDetailslayout"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wordDetailslayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordTv"
        android:visibility="visible"
        >



        <TextView
            android:id="@+id/partsOfSpeechTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="30dp"
            tools:text="Parts of speech : noun"
            />

        <TextView
            android:id="@+id/meaningsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/partsOfSpeechTv"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            tools:text="Meaning : the study of the heart and its action and diseases"
            />

        <TextView
            android:id="@+id/sentencesTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meaningsTv"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            />


        <Button
            android:id="@+id/iKnewThisWordBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_knew_this_word_bt_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sentencesTv"
            android:layout_marginTop="30dp"
            android:backgroundTint="#90C895"
            android:textColor="#164317"
            android:padding="10dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/iDidntKnewThisWordBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_didnt_knew_this_word_bt_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iKnewThisWordBt"
            android:backgroundTint="#E8BBB8"
            android:textColor="#164317"
            android:padding="10dp"
            android:textStyle="bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/masteredTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tapToSeeMeaningBt"
        tools:text="You have mastered 3 out of 20 words"/>

    <ProgressBar
        android:id="@+id/masteredProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masteredTv" />


    <TextView
        android:id="@+id/reviewingTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/masteredProgressBar"
        tools:text="You are reviewing 3 out of 20 words"
        />

    <ProgressBar
        android:id="@+id/reviewingProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewingTv"
        android:layout_marginTop="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />

    <TextView
        android:id="@+id/learningTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/reviewingProgressBar"
        tools:text="You are learning 3 out of 20 words"
        />

    <ProgressBar
        android:id="@+id/learningProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/learningTv"
        android:layout_marginTop="6dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="70dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>